--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "IvvuMs97YBrq"
       },
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
         "id": "P4HZFRgWgAiZ",
         "outputId": "ea2c94f5-f109-4ec2-a87e-b49c8791764a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5158,7 +5158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "qOYrDWDJYBrr"
       },
@@ -5198,7 +5198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "OdWjxOzLYBrr"
       },
@@ -5220,7 +5220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "tZiDIcrGYBrs",
         "colab": {
@@ -5279,7 +5279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "urhdS8skYBrs",
         "colab": {
@@ -5342,7 +5342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "_2KioP9kYBrs"
       },
@@ -5380,7 +5380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "-JA10dGRYBrs"
       },
@@ -5407,7 +5407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "cDbwQJqNYBrs"
       },
@@ -5429,7 +5429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "87ie2VRXYBrs"
       },
@@ -5449,7 +5449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "fYkpLMCeYBrs",
         "colab": {
@@ -5665,7 +5665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "NUez2gfgYBrs"
       },
@@ -5685,7 +5685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "Ra0q2L-vYBrs",
         "colab": {
@@ -5751,7 +5751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "KN1FcT6TYBrs",
         "colab": {
@@ -5787,7 +5787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "THnSG3LQYBrs",
         "colab": {
@@ -5835,7 +5835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "1h1yb4JaYBrs",
         "colab": {
@@ -5873,7 +5873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "HnuQ1CGoYBrt",
         "colab": {
@@ -5904,7 +5904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "skTWoPl0YBrt"
       },
@@ -5915,7 +5915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "BtnNk3X8YBrt",
         "colab": {
@@ -5952,7 +5952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "Jqt0iq-SYBrt"
       },
@@ -5963,7 +5963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "edWOshZuYBrt",
         "colab": {
@@ -5996,13 +5996,13 @@
       "source": [
         "plt.figure(figsize = (10,10))\n",
         "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=labels)\n",
-        "disp.plot(cmap='Blues', colorbar=True)\n",
+        "disp.plot(cmap='Purples', colorbar=True)\n",
         "plt.grid(False)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "yzs7VlsaYBrt"
       },
@@ -6023,7 +6023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "bQ3eGIVVYBrt",
         "colab": {
@@ -6074,7 +6074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "qg93ckszYBrt",
         "colab": {
@@ -6128,7 +6128,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6161,76 +6161,77 @@
       "metadata": {
         "id": "DTpm2XoO3Grh"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def objective(trial):\n",
-        "    # Suggest hyperparams\n",
+        "    # --- Hyperparameter suggestions ---\n",
         "    filters1 = trial.suggest_categorical('filters1', [32, 64])\n",
-        "    filters2 = trial.suggest_categorical('filters2', [64, 128])\n",
-        "    filters3 = trial.suggest_categorical('filters3', [128, 256])\n",
-        "    dropout1 = trial.suggest_float('dropout1', 0.1, 0.5)\n",
-        "    dense_units = trial.suggest_int('dense_units', 64, 256)\n",
-        "    lr = trial.suggest_loguniform('lr', 1e-5, 1e-2)\n",
+        "    dropout1 = trial.suggest_categorical('dropout1', [0.1, 0.15])\n",
+        "    dropout2 = trial.suggest_categorical('dropout2', [0.15, 0.25])\n",
+        "    kernel_size = trial.suggest_categorical('kernel_size', [3, 5])\n",
+        "    if filters1 == 32:\n",
+        "        dense_units = trial.suggest_int('dense_units', 64, 128)\n",
+        "    else:\n",
+        "        dense_units = trial.suggest_int('dense_units', 128, 256)\n",
         "\n",
-        "    # Build model\n",
+        "    # --- Build the model ---\n",
         "    model = Sequential()\n",
-        "    model.add(Conv2D(filters1, (3,3), activation='relu', padding='same', input_shape=(150,150,1)))\n",
+        "    model.add(Conv2D(filters1, (kernel_size, kernel_size), activation='relu', padding='same', input_shape=(150, 150, 1)))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2,2), padding='same'))\n",
-        "    model.add(Conv2D(filters1, (3,3), activation='relu', padding='same'))\n",
-        "    model.add(Dropout(dropout1))\n",
+        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
         "\n",
-        "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2,2), padding='same'))\n",
-        "    model.add(Conv2D(filters2, (3,3), activation='relu', padding='same'))\n",
-        "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2,2), padding='same'))\n",
-        "    model.add(Conv2D(filters2, (3,3), activation='relu', padding='same'))\n",
+        "    model.add(Conv2D(filters1, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
         "    model.add(Dropout(dropout1))\n",
+        "    model.add(BatchNormalization())\n",
+        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
         "\n",
+        "    model.add(Conv2D(filters1 * 2, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2,2), padding='same'))\n",
-        "    model.add(Conv2D(filters3, (3,3), activation='relu', padding='same'))\n",
+        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
+        "\n",
+        "    model.add(Conv2D(filters1 * 2, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
         "    model.add(Dropout(dropout1))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2,2), padding='same'))\n",
+        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
+        "\n",
+        "    model.add(Conv2D(filters1 * 4, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
+        "    model.add(Dropout(dropout2))\n",
+        "    model.add(BatchNormalization())\n",
+        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
         "\n",
         "    model.add(Flatten())\n",
         "    model.add(Dense(dense_units, activation='relu'))\n",
-        "    model.add(Dropout(dropout1))\n",
+        "    model.add(Dropout(dropout2))\n",
         "    model.add(Dense(1, activation='sigmoid'))\n",
         "\n",
-        "    # Compile\n",
-        "    optimizer = RMSprop(learning_rate=lr)\n",
-        "    model.compile(optimizer=optimizer, loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "    # --- Compile ---\n",
+        "    model.compile(optimizer=\"rmsprop\", loss='binary_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "    # Callbacks\n",
+        "    # --- Callbacks ---\n",
         "    callbacks = [\n",
         "        EarlyStopping(monitor='val_accuracy', patience=3, restore_best_weights=True),\n",
-        "        ReduceLROnPlateau(monitor='val_accuracy', patience=2, factor=0.5, min_lr=1e-5)\n",
+        "        ReduceLROnPlateau(monitor='val_accuracy', patience=2, factor=0.5, min_lr=1e-6)\n",
         "    ]\n",
         "\n",
-        "    # Train\n",
+        "    # --- Train ---\n",
         "    history = model.fit(\n",
-        "        x_train, y_train,\n",
-        "        validation_data=(x_val, y_val),\n",
-        "        epochs=20,\n",
-        "        batch_size=32,\n",
-        "        callbacks=callbacks,\n",
-        "        verbose=0\n",
+        "        datagen.flow(x_train, y_train, batch_size=32),\n",
+        "        epochs=12,\n",
+        "        validation_data=datagen.flow(x_val, y_val),\n",
+        "        callbacks=callbacks\n",
         "    )\n",
         "\n",
-        "    return 1.0 - max(history.history['val_accuracy'])\n",
-        "\n"
+        "    # Return validation accuracy of last epoch\n",
+        "    return history.history['val_accuracy'][-1]\n"
       ],
       "metadata": {
         "id": "bfbd2bM23O3d"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6246,7 +6247,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6306,8 +6307,7 @@
         "model15.add(Dropout(0.1))\n",
         "model15.add(Dense(units = 1 , activation = 'sigmoid'))\n",
         "model15.compile(optimizer = \"rmsprop\" , loss = 'binary_crossentropy' , metrics = ['accuracy'])\n",
-        "model15.summary()\n",
-        ""
+        "model15.summary()\n"
       ],
       "metadata": {
         "id": "-i6vp5tpKaH0",
@@ -6317,7 +6317,7 @@
           "height": 997
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6510,7 +6510,7 @@
       "metadata": {
         "id": "FABrvekxNDhL"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6522,7 +6522,7 @@
       "metadata": {
         "id": "Jp61TQrRL2yf"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6533,7 +6533,7 @@
       "metadata": {
         "id": "FAVgpQv9NMrQ"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6555,7 +6555,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6628,7 +6628,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6688,7 +6688,7 @@
           "height": 941
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6867,7 +6867,7 @@
       "metadata": {
         "id": "M9IxWIvvCYvl"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6882,7 +6882,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6961,7 +6961,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
