Heb nu de optimizer opnieuw gemaakt

--- a/main.ipynb
+++ b/main.ipynb
@@ -6173,6 +6173,8 @@
         "    dropout1 = trial.suggest_categorical('dropout1', [0.1, 0.15])\n",
         "    dropout2 = trial.suggest_categorical('dropout2', [0.15, 0.25])\n",
         "    kernel_size = trial.suggest_categorical('kernel_size', [3, 5])\n",
+        "    learning_factor = trial.suggest_categorical('learning_factor', [0.1, 0.25, 0.5, 0.75, 0.9])\n",
+        "\n",
         "    if filters1 == 32:\n",
         "        dense_units = trial.suggest_int('dense_units', 64, 128)\n",
         "    else:\n",
@@ -6180,28 +6182,28 @@
         "\n",
         "    # --- Build the model ---\n",
         "    model = Sequential()\n",
-        "    model.add(Conv2D(filters1, (kernel_size, kernel_size), activation='relu', padding='same', input_shape=(150, 150, 1)))\n",
+        "    model.add(Conv2D(filters1, (kernel_size, kernel_size), strides = 1,activation='relu', padding='same', input_shape=(150, 150, 1)))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
+        "    model.add(MaxPool2D((2, 2), strides = 2, padding='same'))\n",
         "\n",
-        "    model.add(Conv2D(filters1, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
+        "    model.add(Conv2D(filters1, (kernel_size, kernel_size), strides = 1, activation='relu', padding='same'))\n",
         "    model.add(Dropout(dropout1))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
+        "    model.add(MaxPool2D((2, 2), strides =2, padding='same'))\n",
         "\n",
-        "    model.add(Conv2D(filters1 * 2, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
+        "    model.add(Conv2D(filters1 * 2, (kernel_size, kernel_size), strides = 1, activation='relu', padding='same'))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
+        "    model.add(MaxPool2D((2, 2), strides = 2, padding='same'))\n",
         "\n",
-        "    model.add(Conv2D(filters1 * 2, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
+        "    model.add(Conv2D(filters1 * 2, (kernel_size, kernel_size), strides = 1, activation='relu', padding='same'))\n",
         "    model.add(Dropout(dropout1))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
+        "    model.add(MaxPool2D((2, 2), strides =2, padding='same'))\n",
         "\n",
-        "    model.add(Conv2D(filters1 * 4, (kernel_size, kernel_size), activation='relu', padding='same'))\n",
+        "    model.add(Conv2D(filters1 * 4, (kernel_size, kernel_size), strides =1, activation='relu', padding='same'))\n",
         "    model.add(Dropout(dropout2))\n",
         "    model.add(BatchNormalization())\n",
-        "    model.add(MaxPool2D((2, 2), padding='same'))\n",
+        "    model.add(MaxPool2D((2, 2), strides = 2, padding='same'))\n",
         "\n",
         "    model.add(Flatten())\n",
         "    model.add(Dense(dense_units, activation='relu'))\n",
@@ -6214,7 +6216,7 @@
         "    # --- Callbacks ---\n",
         "    callbacks = [\n",
         "        EarlyStopping(monitor='val_accuracy', patience=3, restore_best_weights=True),\n",
-        "        ReduceLROnPlateau(monitor='val_accuracy', patience=2, factor=0.5, min_lr=1e-6)\n",
+        "        ReduceLROnPlateau(monitor='val_accuracy', patience=2, factor=learning_factor, min_lr=1e-6)\n",
         "    ]\n",
         "\n",
         "    # --- Train ---\n",
