--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -54,35 +54,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
-      "metadata": {
-        "id": "IvvuMs97YBrq"
-      },
-      "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import keras\n",
-        "import tensorflow as tf\n",
+        "import os\n",
+        "import cv2\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense, Conv2D , MaxPool2D , Flatten , Dropout , BatchNormalization\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report,confusion_matrix\n",
-        "from keras.callbacks import ReduceLROnPlateau, EarlyStopping\n",
-        "import cv2\n",
-        "import os\n",
         "import optuna\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "import keras\n",
+        "import tensorflow as tf\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Conv2D, MaxPool2D, Flatten, Dropout, BatchNormalization\n",
-        "from keras.optimizers import RMSprop, Adam\n",
+        "from keras.callbacks import ReduceLROnPlateau\n",
+        "from keras.optimizers import RMSprop\n",
         "from keras.losses import BinaryCrossentropy\n",
-        "from sklearn.metrics import ConfusionMatrixDisplay\n",
         "import tensorflow.keras.applications as app\n",
-        "from IPython.display import Image, display\n"
-      ]
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import ConfusionMatrixDisplay\n",
+        "from sklearn.metrics import classification_report,confusion_matrix\n",
+        "from IPython.display import Image, display"
+      ],
+      "metadata": {
+        "id": "biOBUTwMatWD"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -101,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +124,7 @@
         "id": "P4HZFRgWgAiZ",
         "outputId": "6de34ff9-a999-4019-f106-e12befb6054d"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5139,7 +5137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "qOYrDWDJYBrr"
       },
@@ -5179,7 +5177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "OdWjxOzLYBrr"
       },
@@ -5201,7 +5199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "tZiDIcrGYBrs",
         "colab": {
@@ -5260,7 +5258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "urhdS8skYBrs",
         "outputId": "a2ff4c58-3a66-4337-fd43-f59d51508657",
@@ -5323,7 +5321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "_2KioP9kYBrs"
       },
@@ -5361,7 +5359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "-JA10dGRYBrs"
       },
@@ -5388,7 +5386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "cDbwQJqNYBrs"
       },
@@ -5410,7 +5408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "87ie2VRXYBrs"
       },
@@ -5430,48 +5428,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "fYkpLMCeYBrs"
       },
       "outputs": [],
       "source": [
-        "# model = Sequential()\n",
-        "# model.add(Conv2D(32 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu' , input_shape = (150,150,1)))\n",
-        "# model.add(BatchNormalization())\n",
-        "# model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
-        "# model.add(Conv2D(64 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
-        "# model.add(Dropout(0.1))\n",
-        "# model.add(BatchNormalization())\n",
-        "# model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
-        "# model.add(Conv2D(64 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
-        "# model.add(BatchNormalization())\n",
-        "# model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
-        "# model.add(Conv2D(128 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
-        "# model.add(Dropout(0.2))\n",
-        "# model.add(BatchNormalization())\n",
-        "# model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
-        "# model.add(Conv2D(256 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
-        "# model.add(Dropout(0.2))\n",
-        "# model.add(BatchNormalization())\n",
-        "# model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
-        "# model.add(Flatten())\n",
-        "# model.add(Dense(units = 128 , activation = 'relu'))\n",
-        "# model.add(Dropout(0.2))\n",
-        "# model.add(Dense(units = 1 , activation = 'sigmoid'))\n",
-        "# model.compile(optimizer = \"rmsprop\" , loss = 'binary_crossentropy' , metrics = ['accuracy'])\n",
-        "# model.summary()"
+        "model = Sequential()\n",
+        "model.add(Conv2D(32 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu' , input_shape = (150,150,1)))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
+        "model.add(Conv2D(64 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
+        "model.add(Dropout(0.1))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
+        "model.add(Conv2D(64 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
+        "model.add(Conv2D(128 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
+        "model.add(Dropout(0.2))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
+        "model.add(Conv2D(256 , (3,3) , strides = 1 , padding = 'same' , activation = 'relu'))\n",
+        "model.add(Dropout(0.2))\n",
+        "model.add(BatchNormalization())\n",
+        "model.add(MaxPool2D((2,2) , strides = 2 , padding = 'same'))\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(units = 128 , activation = 'relu'))\n",
+        "model.add(Dropout(0.2))\n",
+        "model.add(Dense(units = 1 , activation = 'sigmoid'))\n",
+        "model.compile(optimizer = \"rmsprop\" , loss = 'binary_crossentropy' , metrics = ['accuracy'])\n",
+        "model.summary()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "NUez2gfgYBrs"
       },
       "outputs": [],
       "source": [
-        "# learning_rate_reduction = ReduceLROnPlateau(monitor='val_accuracy', patience = 2, verbose=1,factor=0.3, min_lr=0.000001)"
+        "learning_rate_reduction = ReduceLROnPlateau(monitor='val_accuracy', patience = 2, verbose=1,factor=0.3, min_lr=0.000001)"
       ]
     },
     {
@@ -5485,7 +5483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "Ra0q2L-vYBrs",
         "outputId": "8b55fce8-8826-476d-b5cc-604b57bccb3c",
@@ -5508,7 +5506,7 @@
         }
       ],
       "source": [
-        "# history = model.fit(datagen.flow(x_train, y_train, batch_size=32), epochs=12, validation_data= datagen.flow(x_val, y_val), callbacks =[learning_rate_reduction])"
+        "history = model.fit(datagen.flow(x_train, y_train, batch_size=32), epochs=12, validation_data= datagen.flow(x_val, y_val), callbacks =[learning_rate_reduction])"
       ]
     },
     {
@@ -5519,8 +5517,8 @@
       },
       "outputs": [],
       "source": [
-        "# print(\"Loss of the model is - \" , model.evaluate(x_test, y_test)[0])\n",
-        "# print(\"Accuracy of the model is - \" , model.evaluate(x_test,y_test)[1]*100 , \"%\")"
+        "print(\"Loss of the model is - \" , model.evaluate(x_test, y_test)[0])\n",
+        "print(\"Accuracy of the model is - \" , model.evaluate(x_test,y_test)[1]*100 , \"%\")"
       ]
     },
     {
@@ -5540,28 +5538,28 @@
       },
       "outputs": [],
       "source": [
-        "# epochs = [i for i in range(12)]\n",
-        "# fig , ax = plt.subplots(1,2)\n",
-        "# train_acc = history.history['accuracy']\n",
-        "# train_loss = history.history['loss']\n",
-        "# val_acc = history.history['val_accuracy']\n",
-        "# val_loss = history.history['val_loss']\n",
-        "# fig.set_size_inches(20,10)\n",
+        "epochs = [i for i in range(12)]\n",
+        "fig , ax = plt.subplots(1,2)\n",
+        "train_acc = history.history['accuracy']\n",
+        "train_loss = history.history['loss']\n",
+        "val_acc = history.history['val_accuracy']\n",
+        "val_loss = history.history['val_loss']\n",
+        "fig.set_size_inches(20,10)\n",
         "\n",
-        "# ax[0].plot(epochs , train_acc , 'go-' , label = 'Training Accuracy')\n",
-        "# ax[0].plot(epochs , val_acc , 'ro-' , label = 'Validation Accuracy')\n",
-        "# ax[0].set_title('Training & Validation Accuracy')\n",
-        "# ax[0].legend()\n",
-        "# ax[0].set_xlabel(\"Epochs\")\n",
-        "# ax[0].set_ylabel(\"Accuracy\")\n",
+        "ax[0].plot(epochs , train_acc , 'go-' , label = 'Training Accuracy')\n",
+        "ax[0].plot(epochs , val_acc , 'ro-' , label = 'Validation Accuracy')\n",
+        "ax[0].set_title('Training & Validation Accuracy')\n",
+        "ax[0].legend()\n",
+        "ax[0].set_xlabel(\"Epochs\")\n",
+        "ax[0].set_ylabel(\"Accuracy\")\n",
         "\n",
-        "# ax[1].plot(epochs , train_loss , 'g-o' , label = 'Training Loss')\n",
-        "# ax[1].plot(epochs , val_loss , 'r-o' , label = 'Validation Loss')\n",
-        "# ax[1].set_title('Testing Accuracy & Loss')\n",
-        "# ax[1].legend()\n",
-        "# ax[1].set_xlabel(\"Epochs\")\n",
-        "# ax[1].set_ylabel(\"Training & Validation Loss\")\n",
-        "# plt.show()"
+        "ax[1].plot(epochs , train_loss , 'g-o' , label = 'Training Loss')\n",
+        "ax[1].plot(epochs , val_loss , 'r-o' , label = 'Validation Loss')\n",
+        "ax[1].set_title('Testing Accuracy & Loss')\n",
+        "ax[1].legend()\n",
+        "ax[1].set_xlabel(\"Epochs\")\n",
+        "ax[1].set_ylabel(\"Training & Validation Loss\")\n",
+        "plt.show()"
       ]
     },
     {
@@ -5572,10 +5570,10 @@
       },
       "outputs": [],
       "source": [
-        "# # predictions = model.predict_classes(x_test)\n",
-        "# predictions = (model.predict(x_test) > 0.5).astype(\"int32\").flatten()\n",
-        "# predictions = predictions.reshape(1,-1)[0]\n",
-        "# predictions[:46]"
+        "# predictions = model.predict_classes(x_test)\n",
+        "predictions = (model.predict(x_test) > 0.5).astype(\"int32\").flatten()\n",
+        "predictions = predictions.reshape(1,-1)[0]\n",
+        "predictions[:46]"
       ]
     },
     {
@@ -5586,7 +5584,7 @@
       },
       "outputs": [],
       "source": [
-        "# print(classification_report(y_test, predictions, target_names = ['Pneumonia (Class 0)','Normal (Class 1)']))"
+        "print(classification_report(y_test, predictions, target_names = ['Pneumonia (Class 0)','Normal (Class 1)']))"
       ]
     },
     {
@@ -5597,8 +5595,8 @@
       },
       "outputs": [],
       "source": [
-        "# cm = confusion_matrix(y_test,predictions)\n",
-        "# cm"
+        "cm = confusion_matrix(y_test,predictions)\n",
+        "cm"
       ]
     },
     {
@@ -5618,7 +5616,7 @@
       },
       "outputs": [],
       "source": [
-        "# cm = pd.DataFrame(cm , index = ['0','1'] , columns = ['0','1'])"
+        "cm = pd.DataFrame(cm , index = ['0','1'] , columns = ['0','1'])"
       ]
     },
     {
@@ -5629,10 +5627,10 @@
       },
       "outputs": [],
       "source": [
-        "# plt.figure(figsize = (10,10))\n",
-        "# disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=labels)\n",
-        "# disp.plot(cmap='Purples', colorbar=True)\n",
-        "# plt.grid(False)\n"
+        "plt.figure(figsize = (10,10))\n",
+        "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=labels)\n",
+        "disp.plot(cmap='Purples', colorbar=True)\n",
+        "plt.grid(False)\n"
       ]
     },
     {
@@ -5643,8 +5641,8 @@
       },
       "outputs": [],
       "source": [
-        "# correct = np.nonzero(predictions == y_test)[0]\n",
-        "# incorrect = np.nonzero(predictions != y_test)[0]"
+        "correct = np.nonzero(predictions == y_test)[0]\n",
+        "incorrect = np.nonzero(predictions != y_test)[0]"
       ]
     },
     {
@@ -5664,15 +5662,15 @@
       },
       "outputs": [],
       "source": [
-        "# i = 0\n",
-        "# for c in correct[:6]:\n",
-        "#     plt.subplot(3,2,i+1)\n",
-        "#     plt.xticks([])\n",
-        "#     plt.yticks([])\n",
-        "#     plt.imshow(x_test[c].reshape(150,150), cmap=\"gray\", interpolation='none')\n",
-        "#     plt.title(\"Predicted Class {},Actual Class {}\".format(predictions[c], y_test[c]))\n",
-        "#     # plt.tight_layout()\n",
-        "#     i += 1"
+        "i = 0\n",
+        "for c in correct[:6]:\n",
+        "    plt.subplot(3,2,i+1)\n",
+        "    plt.xticks([])\n",
+        "    plt.yticks([])\n",
+        "    plt.imshow(x_test[c].reshape(150,150), cmap=\"gray\", interpolation='none')\n",
+        "    plt.title(\"Predicted Class {},Actual Class {}\".format(predictions[c], y_test[c]))\n",
+        "    # plt.tight_layout()\n",
+        "    i += 1"
       ]
     },
     {
@@ -5699,15 +5697,15 @@
       },
       "outputs": [],
       "source": [
-        "# i = 0\n",
-        "# for c in incorrect[:6]:\n",
-        "#     plt.subplot(3,2,i+1)\n",
-        "#     plt.xticks([])\n",
-        "#     plt.yticks([])\n",
-        "#     plt.imshow(x_test[c].reshape(150,150), cmap=\"gray\", interpolation='none')\n",
-        "#     plt.title(\"Predicted Class {},Actual Class {}\".format(predictions[c], y_test[c]))\n",
-        "#     # plt.tight_layout()\n",
-        "#     i += 1"
+        "i = 0\n",
+        "for c in incorrect[:6]:\n",
+        "    plt.subplot(3,2,i+1)\n",
+        "    plt.xticks([])\n",
+        "    plt.yticks([])\n",
+        "    plt.imshow(x_test[c].reshape(150,150), cmap=\"gray\", interpolation='none')\n",
+        "    plt.title(\"Predicted Class {},Actual Class {}\".format(predictions[c], y_test[c]))\n",
+        "    # plt.tight_layout()\n",
+        "    i += 1"
       ]
     },
     {
@@ -5720,13 +5718,14 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "#Code of Bayesian Optimization\n",
+        "####(Is comentend no longer needed)"
+      ],
       "metadata": {
-        "id": "DTpm2XoO3Grh"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "OHgPBnD-Zz2q"
+      }
     },
     {
       "cell_type": "code",
@@ -5849,7 +5848,7 @@
           "height": 968
         }
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6036,7 +6035,7 @@
       "metadata": {
         "id": "N3AzqRc9pFpR"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6051,7 +6050,7 @@
         "id": "hlicC8lEpIWP",
         "outputId": "cddc83d7-b149-4228-9a65-53ba69d3996d"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6180,7 +6179,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6208,7 +6207,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6243,7 +6242,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6270,7 +6269,7 @@
       "metadata": {
         "id": "Z2YubzFusK8S"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6289,7 +6288,7 @@
           "height": 466
         }
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6320,7 +6319,7 @@
       "metadata": {
         "id": "aPbbzVRTgg6t"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6344,11 +6343,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import cv2\n",
-        "import tensorflow as tf\n",
-        "from tensorflow import keras\n",
         "\n",
         "# ---- 1. Make a dummy call to initialize model10\n",
         "sample_input = np.expand_dims(x_test[0], axis=0)  # or any image\n",
@@ -6425,7 +6419,7 @@
           "height": 391
         }
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6530,7 +6524,7 @@
           "height": 425
         }
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6620,7 +6614,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "A100",
+      "gpuType": "T4",
       "machine_shape": "hm",
       "include_colab_link": true
     },
