--- a/capsule_network_mnist.ipynb
+++ b/capsule_network_mnist.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Capsule Network model on Pneumonia dataset\n",
+    "# MNIST example Capsule Network model\n",
     "\n",
-    "An adaptation from the MNIST baseline model created in the other file named such"
+    "First, (re)constructed model is created for the well documented MNIST dataset in order to be able to compare with the foundational paper and other resources online attempting implementations of Capsule Networks.\n",
+    "\n",
+    "Once functionality for this is established it can be adapted to our Pneumonia task with the knowledge that the architecture functions should work properly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,20 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_layer_output_imgsize(input_size: int, kernel_size: int = 9, strides: int = 1):\n",
-    "    return (input_size - kernel_size) // strides\n",
-    "\n",
-    "def get_img_dims(img) -> int:\n",
-    "    return img.shape[1], img.shape[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +115,6 @@
     "    lambda_=0.5,\n",
     "    alpha=0.0005,\n",
     "):\n",
-    "    img_dim_w, img_dim_h = get_img_dims(y_image)\n",
-    "    img_resolution = img_dim_w * img_dim_h\n",
-    "\n",
     "    safe_normal = safe_normalise(vector, axis=-1, keepdims=True)\n",
     "    prediction = tf.reshape(safe_normal, [-1, num_super_capsules])\n",
     "\n",
@@ -138,13 +124,22 @@
     "    margin_loss = tf.add(y * left_margin, lambda_ * (1.0 - y) * right_margin)\n",
     "    margin_loss = tf.reduce_mean(tf.reduce_sum(margin_loss, axis=-1))\n",
     "\n",
-    "    y_image_flat = tf.reshape(y_image, [-1, img_resolution])\n",
-    "    print(f\"{y_image_flat.shape= }\")\n",
+    "    y_image_flat = tf.reshape(y_image, [-1, 784])  #!TODO HARDCODED 28x28 pixels\n",
     "    reconstruction_loss = tf.reduce_mean(tf.square(y_image_flat - reconstructed_image))\n",
     "\n",
     "    loss = tf.add(margin_loss, alpha * reconstruction_loss)\n",
     "\n",
     "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_layer_output_imgsize(input_size: int, kernel_size: int = 9, strides: int = 1):\n",
+    "    return (input_size - kernel_size) // strides"
    ]
   },
   {
@@ -165,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +169,7 @@
        "(TensorShape([60000, 28, 28, 1]), TensorShape([10000, 28, 28, 1]))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +258,7 @@
        "(None, array([5, 0, 4, 1, 9], dtype=uint8))"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,28 +479,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y_image_flat.shape= TensorShape([32, 784])\n"
+      "WARNING:tensorflow:Error while stopping profiler: Cannot export profiling results. No profiler is running.\n"
      ]
     }
    ],
    "source": [
-    "def train(X, y) -> float:\n",
+    "def train(x,y):\n",
     "    y_one_hot = tf.one_hot(y, depth=num_super_capsules)\n",
     "    with tf.GradientTape() as tape:\n",
-    "        vector, reconstructed_image = model([X, y_one_hot])\n",
-    "        loss = loss_function(vector, reconstructed_image, y_one_hot, X)\n",
+    "        v, reconstructed_image = model([x, y_one_hot])\n",
+    "        loss = loss_function(v, reconstructed_image, y_one_hot, x)\n",
     "    grad = tape.gradient(loss, model.trainable_variables)\n",
     "    Optimiser.apply_gradients(zip(grad, model.trainable_variables))\n",
     "    return loss\n",
     "\n",
-    "_ = train(X_train[:32], y_train[:32])\n",
+    "# _ = train(X_train[:32], y_train[:32])\n",
     "\n",
     "tf.summary.trace_off()"
    ]
