--- a/capsule_network.ipynb
+++ b/capsule_network.ipynb
@@ -610,6 +610,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_samples = 5\n",
+    "\n",
+    "plt.figure(figsize=(n_samples * 2, 3))\n",
+    "for index in range(n_samples):\n",
+    "    plt.subplot(1, n_samples, index + 1)\n",
+    "    plt.imshow(sample_images[index], cmap=\"binary\")\n",
+    "    plt.title(\"Label:\" + str(mnist.test.labels[index]))\n",
+    "    plt.axis(\"off\")\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(n_samples * 2, 3))\n",
+    "for index in range(n_samples):\n",
+    "    plt.subplot(1, n_samples, index + 1)\n",
+    "    plt.title(\"Predicted:\" + str(y_pred_value[index]))\n",
+    "    plt.imshow(reconstructions[index], cmap=\"binary\")\n",
+    "    plt.axis(\"off\")\n",
+    "    \n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
    "outputs": [
