--- a/capsule_network.ipynb
+++ b/capsule_network.ipynb
@@ -11,14 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
     "from tqdm import tqdm\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt"
@@ -40,10 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "img_size = 28\n",
     "cutoff = 128  # 0 == use all\n",
     "\n",
     "epochs = 2\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "# img_size = 150\n",
     "img_size = 28\n",
     "\n",
-    "def get_training_data(data_dir):\n",
+    "def get_training_data(data_dir, img_size=150):\n",
     "    data = []\n",
     "    for label in labels:\n",
     "        path = os.path.join(data_dir, label)\n",
@@ -103,19 +103,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_set = get_training_data('Data/chest_xray/chest_xray/train')\n",
-    "# test_set = get_training_data('Data/chest_xray/chest_xray/test')"
+    "train_set150 = get_training_data('Data/chest_xray/chest_xray/train', 150)\n",
+    "test_set150 = get_training_data('Data/chest_xray/chest_xray/test', 150)\n",
+    "\n",
+    "train_set56 = get_training_data('Data/chest_xray/chest_xray/train', 56)\n",
+    "test_set56 = get_training_data('Data/chest_xray/chest_xray/test', 56)\n",
+    "\n",
+    "train_set28 = get_training_data('Data/chest_xray/chest_xray/train', 28)\n",
+    "test_set28 = get_training_data('Data/chest_xray/chest_xray/test', 28)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "if img_size == 28:\n",
+    "    train_set = train_set28\n",
+    "    test_set = test_set28\n",
+    "elif img_size == 56:\n",
+    "    train_set = train_set56\n",
+    "    test_set = test_set56\n",
+    "else:\n",
+    "    train_set = train_set150\n",
+    "    test_set = test_set150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_set' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m X_train \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m y_train \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m feature, label \u001b[38;5;129;01min\u001b[39;00m train_set:\n\u001b[1;32m      4\u001b[0m     X_train\u001b[38;5;241m.\u001b[39mappend(feature)\n\u001b[1;32m      5\u001b[0m     y_train\u001b[38;5;241m.\u001b[39mappend(label)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_set' is not defined"
+     ]
+    }
+   ],
    "source": [
     "X_train = []\n",
     "y_train = []\n",
@@ -132,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +937,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ds-ass2",
+   "display_name": "ass2",
    "language": "python",
    "name": "python3"
   },
